# Volatility-Forecasting

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
notebooks/: 01_eda.ipynb  02_results_writeup.ipynb
reports/: comparison.md
scripts/: 01_build_universe.py  02_ingest_ohlcv.py  03_build_features.py  04_train_baselines.py  05_train_lgbm.py  06_train_lstm.py  07_compare_models.py
src/: config.py
src/data/: features.py  ingest.py  storage.py  universe.py
src/eval/: metrics.py  runner.py  splits.py
src/models/: base.py  garch.py  lgbm.py  lstm.py  rolling_hist.py
src/viz/: plots.py
tests/: test_features.py  test_metrics.py  test_splits.py
